sfdx-source/packaged/main/trigger-utils/objects/HandlerControl__mdt/HandlerControl__mdt.object-meta.xml
<CustomObject>
    <description>Registers a trigger handler that implements the interface with the framework and allows to control execution.</description>
    <label>Handler Control</label>
    <pluralLabel>Handler Controls</pluralLabel>
</CustomObject>