sfdx-source/packaged/main/trigger-utils/objects/HandlerControl__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>The exact class name of the handler that implements the interface. This is used to dynamically construct the class during runtime.</description>
    <inlineHelpText>The developer name of the Apex Class that implements the interface</inlineHelpText>
    <label>Handler</label>
    <length>40</length>
    <type>Text</type>
</CustomField>