sfdx-source/packaged/main/trigger-utils/objects/HandlerControl__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The order of execution for this specific handler. Higher numbers are executed earlier in a transaction.</description>
    <inlineHelpText>Higher priorities are executed earlier during a transaction.</inlineHelpText>
    <label>Priority</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>