sfdx-source/packaged/main/trigger-utils/objects/HandlerControl__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The SObject for which the configuration will be executed.</description>
    <inlineHelpText>Select the SObject-Type where this configuration will be triggered</inlineHelpText>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Triggers</relationshipLabel>
    <relationshipName>Triggers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>